# trt_converter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  run.sh  run_clang_format.sh  run_include_what_you_use.sh
cmake/: fetch_google_benchmark.cmake  fetch_google_test.cmake
include/trt_converter/calibrate/: calibrator.h  stream.h
include/trt_converter/common/: argparser.h  buffer.h  calibrator.h  common.h  device.h  engine.h  env.h  half.h  logger.h  logging.h  macro.h  options.h  profiler.h  report.h  status.h  trace.h  utils.h
include/trt_converter/memory/: allocator.h
src/: CMakeLists.txt
src/calibrate/: CMakeLists.txt  stream.cpp
src/common/: CMakeLists.txt  common.cpp  env.cpp  logger.cpp  logging.cpp  options.cpp  profiler.cpp  report.cpp
tests/: CMakeLists.txt
tests/integration_test/: CMakeLists.txt  cuda_graph_exec_test.cu  cuda_simple_func_test.cu  sample_int8_test.cpp
tests/unittest/: CMakeLists.txt  data_read_unittest.cpp  filesystem_unittest.cpp  logger_unittest.cpp  mnist_stream_unittest.cpp  str_function_unittest.cpp
tools/: CMakeLists.txt  client.cpp  rpc_stream_server.cpp  rpc_stream_server.h  server.cpp
tools/proto/: CMakeLists.txt  client.py  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
