
add_executable(mnist_stream_unittest mnist_stream_unittest.cpp)
target_link_libraries(mnist_stream_unittest PUBLIC common)
add_test(NAME test_mnist_stream COMMAND mnist_stream_unittest)

add_executable(data_read_unittest data_read_unittest.cpp)
add_test(NAME test_data_read COMMAND data_read_unittest)